treafik-pre.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
