k8s-dashboard-ingress.yaml
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: k8s-dashboard-ingress-http
#  namespace: kube-system
#  annotations:
#    kubernetes.io/ingress.class: traefik
#spec:
#  entryPoints:
#    - web
#  routes:
#  - match: Host(`k8s.hs-network.xyz`) && PathPrefix(`/`)
#    kind: Rule
#    services:
#    - name: kubernetes-dashboard
#      port: 443
#
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-dashboard-ingress-https
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`k8s.hs-network.xyz`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
  tls:
    certResolver: myresolver
