treafik-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ingressauth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-basic-auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`trk-staging.hs-network.xyz`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: ingressauth
      namespace: traefik
    - name: traefik-redirect-https@kubernetescrd
      namespace: traefik
    services:
    - name: traefik
      port: 8080

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ssl
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`trk-staging.hs-network.xyz`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: ingressauth
      namespace: traefik
    services:
    - name: traefik
      port: 8080
  tls:
    certResolver: myresolver
