whoami.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: whoami-deployment
  namespace: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami
        image: containous/whoami
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: whoami
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: whoami

#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: whoami-ingress-http
#  namespace: whoami
#  annotations:
#    kubernetes.io/ingress.class: traefik
#spec:
#  entryPoints:
#    - web
#  routes:
#  - match: Host(`whoami.hs-network.xyz`) && PathPrefix(`/`)
#    kind: Rule
#    services:
#    - name: whoami-service
#      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-https
  namespace: whoami
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`whoami.hs-network.xyz`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: whoami-service
      port: 80
  tls:
    certResolver: myresolver
